# pre-commit-hooks

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  pyproject.toml
pchooks/: check_module_docstring_space.py  check_multiline_docstrings.py
tests/: test_check_module_docstring_space.py  test_check_multiline_docstrings.py
tests/resources/: function_end_invalid_2.py  function_end_invalid_3.py  function_start_invalid_1.py  function_start_invalid_2.py  function_start_invalid_3.py  function_valid.py  module_ds_no_line.py  module_ds_one_line.py  module_ds_two_lines.py  module_end_invalid_1.py  module_end_invalid_2.py  module_end_invalid_3.py  module_start_invalid_1.py  module_start_invalid_2.py  module_start_invalid_3.py  module_valid.py
